# blueswitch-pos

./: .gitignore
backend/: alembic.ini  main.py  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 3cb3afdd496b_add_cashiers_table.py  48742bb8abe2_add_admin_users_table.py  60d0cf70b51c_create_pos_schema_tables_products_sales_.py  67643be0a090_add_checkout_request_id_to_payments.py
backend/app/models/: admin_user.py  cashier.py  payment.py  product.py  sale.py  sale_item.py
backend/app/routers/: auth.py  cashiers.py  products.py  reports.py  sales.py
backend/app/schemas/: cashier.py  product.py  sale.py
backend/app/services/: auth.py  auth_dependency.py  daraja.py  receipt.py
frontend/: electron-main.cjs  index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: AdminPanel.jsx  CartPanel.jsx  CashierLogin.jsx  CheckoutModal.jsx  Header.jsx  LoginScreen.jsx  NewOrderForm.jsx  OrdersDashboard.jsx  ProductCard.jsx  ProductGrid.jsx  SplashScreen.jsx
