[project]
name = "blueswitch-pos-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "bcrypt==4.0.1",
    "fastapi>=0.139.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.51.0",
    "weasyprint>=69.0",
]
